objects/ssot__GiftEntry__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CampaignId__c</fullName>
        <label>Campaign</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CheckDate__c</fullName>
        <label>Check Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CityName__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CountryName__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DonorCoverAmount__c</fullName>
        <label>Donor Cover Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DonorId__c</fullName>
        <label>Donor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailAddress__c</fullName>
        <label>Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftAmount__c</fullName>
        <label>Gift Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GiftBatchId__c</fullName>
        <label>Gift Batch</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftCommitmentId__c</fullName>
        <label>Gift Commitment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftDesignation1Amount__c</fullName>
        <label>Gift Designation1 Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GiftDesignation1Id__c</fullName>
        <label>Gift Designation1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftDesignation1Percent__c</fullName>
        <label>Gift Designation1 Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GiftDesignation2Amount__c</fullName>
        <label>Gift Designation2 Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GiftDesignation2Id__c</fullName>
        <label>Gift Designation2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftDesignation2Percent__c</fullName>
        <label>Gift Designation2 Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GiftDesignation3Amount__c</fullName>
        <label>Gift Designation3 Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GiftDesignation3Id__c</fullName>
        <label>Gift Designation3</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftDesignation3Percent__c</fullName>
        <label>Gift Designation3 Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GiftEntry_CampaignId_map_Campaign_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftEntry_CampaignId_map_Campaign_Id_N_1</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>GiftEntry_CampaignId_map_Campaign_Id_N_1</relationshipLabel>
        <relationshipName>GiftEntry_CampaignId_map_Campaign_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__GiftEntry_DonorId_map_Account_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftEntry_DonorId_map_Account_Id_N_1</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>GiftEntry_DonorId_map_Account_Id_N_1</relationshipLabel>
        <relationshipName>GiftEntry_DonorId_map_Account_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__GiftProcessingResult__c</fullName>
        <label>Gift Processing Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftProcessingStatus__c</fullName>
        <label>Gift Processing Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftReceivedDate__c</fullName>
        <label>Gift Received Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__GiftTransactionId__c</fullName>
        <label>GiftTransaction</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftType__c</fullName>
        <label>Gift Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HomePhone__c</fullName>
        <label>Home Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Gift Entry Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSetAsDefault__c</fullName>
        <label>Is Set As Default</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastProcessedDateTime__c</fullName>
        <label>Last Processed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MobilePhone__c</fullName>
        <label>Mobile Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OrganizationName__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OutreachSourceCodeId__c</fullName>
        <label>Outreach Source Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentIdentifier__c</fullName>
        <label>Payment Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentMethodId__c</fullName>
        <label>Payment Method</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PostalCodeText__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Salutation__c</fullName>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SoftCreditInformationDescription__c</fullName>
        <label>Soft Credit Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StateName__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StreetName__c</fullName>
        <label>StreetName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalTransactionFeeAmount__c</fullName>
        <label>Total Transaction Fee Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761239124_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftEntry_GiftBatchId_map_GiftBatch__rel</label>
        <referenceTo>ssot__GiftBatch__dlm</referenceTo>
        <relationshipLabel>GiftEntry_GiftBatchId_map_GiftBatch__rel</relationshipLabel>
        <relationshipName>rel_1697761239124_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761239188_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftEntry_GiftCommitmentId_map_GiftC_rel</label>
        <referenceTo>ssot__GiftCommitment__dlm</referenceTo>
        <relationshipLabel>GiftEntry_GiftCommitmentId_map_GiftC_rel</relationshipLabel>
        <relationshipName>rel_1697761239188_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761239251_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftEntry_GiftDesignation1Id_map_Gif_rel</label>
        <referenceTo>ssot__GiftDesignation__dlm</referenceTo>
        <relationshipLabel>GiftEntry_GiftDesignation1Id_map_Gif_rel</relationshipLabel>
        <relationshipName>rel_1697761239251_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>